Fix Option UseCGroupMemoryLimitForHeap was deprecated in version 10.0
Fix Option MaxRAMFraction was deprecated in version 10.0